--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/team-chat
+MONGODB_URI=mongodb+srv://kavitasoren2000:1CdP36fUFLJVD1YM@cluster0.ya4xqjg.mongodb.net/minichatapp?appName=Cluster0
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
