--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # Frontend Environment Variables
 VITE_API_URL=https://minichat-app-2v7i.onrender.com/api
-VITE_SOCKET_URL=http://localhost:5000
+VITE_SOCKET_URL=https://minichat-app-2v7i.onrender.com
